# ainas

./: .dockerignore  .gitignore  .gitmodules  README.md  bootstrap.ps1  bootstrap.sh  docker-compose.yml  index.html
.github/workflows/: release.yml
backend/: ainas-backend.spec  alembic.ini  config.yaml  home_page.dart  main.py  nas_server.dart  pyproject.toml  test_full.spec  test_torch.spec
backend/ai/: ai_engine.py
backend/ai/agents/: nas_agent.py
backend/ai/tools/: file_tools.py  image_tools.py
backend/api/: ai.py  api.py  export_openapi.py  files.py
backend/containerize/: Dockerfile  docker-entrypoint.sh
backend/core/: config.py  logger.py
backend/db/: database.py
backend/db/migrations/: env.py
backend/db/migrations/versions/: 0001_initial.py  0002_function_models.py  0003_add_is_local.py  0004_add_feature_metadata.py  0005_add_download_progress.py  0006_add_all_model_files.py  0007_add_total_size.py  0008_add_current_total_size.py  0009_remove_download_progress.py  0010_add_current_model_files.py
backend/monitoring/: prometheus.py
backend/net/: discovery.py
backend/services/: document_service.py  elasticsearch_service.py  huggingface_service.py  image_service.py  pdf_service.py  system_service.py
backend/services/ai/: ai_engine.py
backend/services/ai/agents/: nas_agent.py
backend/services/ai/features/: chat.py  embedding.py  registry.py  vision.py
backend/services/ai/models/: ai_status.py
backend/services/ai/modlesvc/: model_loader.py
backend/services/ai/tools/: file_tools.py  image_tools.py  system_tools.py
backendcpp/: CMakeLists.txt
backendcpp/cmake/: copy_if_exists.cmake
backendcpp/include/ainas/: string_util.hpp
backendcpp/include/ainas/config/: Config.hpp
backendcpp/include/ainas/controller/: AiController.hpp  ConfigController.hpp  FilesController.hpp  LicenseController.hpp  SyncController.hpp  SystemController.hpp  UserController.hpp
backendcpp/include/ainas/database/: ConfigRepository.hpp  Database.hpp  FileRepository.hpp  SyncConfigRepository.hpp  SyncFileManifestRepository.hpp  UserRepository.hpp
backendcpp/include/ainas/dto/: DTOs.hpp
backendcpp/include/ainas/lic/: export.h  lic.h
backendcpp/include/ainas/logging/: Logger.hpp
backendcpp/include/ainas/mdns/: MdnsService.hpp
backendcpp/include/ainas/platform/: Platform.hpp
backendcpp/include/ainas/service/: AiService.hpp  FileService.hpp  PdfService.hpp  SyncService.hpp  ThumbnailService.hpp
backendcpp/include/ainas/util/: cflag.hpp  windows_compat.hpp
backendcpp/include/perfetto/: tracing_ext.h
backendcpp/src/: CMakeLists.txt  main.cpp
backendcpp/src/config/: Config.cpp
backendcpp/src/controller/: AiController.cpp  ConfigController.cpp  LicenseController.cpp  SyncController.cpp  UserController.cpp
backendcpp/src/database/: ConfigRepository.cpp  Database.cpp  FileRepository.cpp  SyncConfigRepository.cpp  SyncFileManifestRepository.cpp  UserRepository.cpp
backendcpp/src/lic/: crypto.cpp  crypto_detail.h  crypto_stub.cpp  fingerprint.cpp  hardware_info_linux.cpp  hardware_info_macos.cpp  hardware_info_stub.cpp  hardware_info_windows.cpp  license.cpp
backendcpp/src/logging/: Logger.cpp
backendcpp/src/mdns/: MdnsService_avahi.cpp  MdnsService_bonjour.cpp  MdnsService_linux.cpp  MdnsService_macos.cpp  MdnsService_stub.cpp
backendcpp/src/perfetto/: TracingExt.cpp
backendcpp/src/platform/: Platform_android.cpp  Platform_ios.cpp  Platform_linux.cpp  Platform_macos.cpp  Platform_windows.cpp
backendcpp/src/service/: AiService.cpp  FileService.cpp  PdfService.cpp  SyncService.cpp  ThumbnailService.cpp
backendcpp/src/util/: cflag.cpp
backendcpp/tools/lic_gen/: CMakeLists.txt  hardware_stub.cpp  main.cpp
docs/: index.html
frontend/: .gitignore  .metadata  README.md  pubspec.yaml
frontend/android/: build.gradle.kts
frontend/android/app/: build.gradle.kts
frontend/android/app/src/main/: AndroidManifest.xml
frontend/lib/: main.dart
frontend/lib/features/ai_assistant/domain/: chat_repository.dart  chat_repository_impl.dart
frontend/lib/features/ai_assistant/domain/models/: chat_message.dart
frontend/lib/features/ai_assistant/presentation/pages/: ai_assistant_page.dart
frontend/lib/features/ai_assistant/presentation/widgets/: ai_assistant_page.dart  chat_bubble.dart  chat_message_bubble.dart  nas_dir_picker.dart  nas_file_picker.dart
frontend/lib/features/license/: license_page.dart
frontend/lib/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_zh.dart  app_zh.arb
frontend/lib/services/: ai_service.dart  api_service.dart  connection_helper.dart  db_service.dart  file_browser_controller.dart  file_service.dart  isar_db_service.dart  kv_entry.dart  lic_service.dart  mdns_service.dart  progress_multipart_request.dart  settings_service.dart  sync_service.dart  user_service.dart
frontend/lib/shared/models/: chat_message.dart  file_item.dart  nas_server.dart  sync_pair.dart  upload_models.dart
frontend/lib/shared/themes/: app_theme.dart
frontend/lib/shared/utils/: backend_process_manager.dart  tracing.dart
frontend/lib/shared/widgets/: ad_splash_screen.dart  ai_config_widget.dart  ai_rag_widget.dart  breadcrumb_bar.dart  file_action_menu.dart  file_grid_view.dart  file_list_view.dart  license_gate.dart  log_viewer_page.dart  login_dialog.dart
frontend/lib/shared/widgets/viewers/: docx_viewer_page.dart  image_viewer_page.dart  pdf_viewer_page.dart  video_viewer_page.dart
frontend/linux/: CMakeLists.txt  run.sh
frontend/linux/runner/: my_application.cc  org.zlab.ainas_frontend.desktop
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
frontend/windows/: CMakeLists.txt
frontend/windows/runner/: CMakeLists.txt  Runner.rc  main.cpp  runner.exe.manifest  runner.exe.manifest.in  windows_compat.h
performence/: README.md  otel-collector-config.yml  record.sh  setup_python_tracing.sh  view.sh
performence/configs/: perfetto-backend.cfg
thirdservices/observability/: docker-compose.yml  prometheus.yml
thirdservices/rag/: docker-compose.yml
(+39 files in other folders)
