[project]
name = "ainas-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "sqlalchemy",
    "zeroconf",
    "transformers",
    "torch",
    "pillow",
    "langchain-openai>=1.2.2",
    "langchain-huggingface>=1.2.2",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "llama-cpp-python>=0.3.28",
    "prometheus-fastapi-instrumentator>=8.0.0",
    "psutil>=7.2.2",
    "elasticsearch>=9.4.1",
    "sentence-transformers>=5.5.1",
    "pypdf>=6.13.2",
    "python-docx>=1.2.0",
    "pypdfium2>=5.10.1",
    "alembic>=1.18.4",
]

[tool.uv]
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/rocm7.2"
default = true

[[tool.uv.index]]
url = "https://pypi.org/simple"
